--- a/product-page/index.html
+++ b/product-page/index.html
@@ -13,8 +13,8 @@
 
     <!-- FontAwesome Link-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="../queries.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="queries.css">
 </head>
 <body>
     <header>
