added new elements for non-desktop devices
They'll only be visible on mobile and tablets. And will tell the user that project only has a desktop version.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="queries.css">
 </head>
 <body>
+    <p class="non-desktop">This project only has a desktop version.</p>
+    <p class="only-tablets">(To get a peek into the desktop version switch to landscape mode.)</p>
     <header>
         <div class="top-header">
             <div class="left-group">
@@ -315,7 +317,5 @@
             <p class="copyright">Copyright &copy; 2021. All Rights Reserved.</p>
         </div>
     </footer>
-
-    
 </body>
 </html>
