wrapped some section's content with new divs
for easy centering

--- a/index.html
+++ b/index.html
@@ -93,9 +93,11 @@
         <section class="hero-section">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Lorem Ipsum is simply dummy text</h1>
-                    <p>We make it easy click, click & done !</p>
-                    <button class="btn-medium">Shop Now</button>
+                    <div class="for-centering">
+                        <h1>Lorem Ipsum is simply dummy text</h1>
+                        <p>We make it easy click, click & done !</p>
+                        <button class="btn-medium">Shop Now</button>
+                    </div>
                 </div>
                 <img src="/images/hero-bg.jpeg" alt="products image">
             </div>
@@ -235,14 +237,16 @@
         </section>
 
         <section class="goals-section">
-            <div class="goals-text">
-                <hr><h2>Our goal</h2>
-                <p class="light-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem sunt a est repellat nisi nemo, odit voluptatum, quos neque sapiente et! Cupiditate, quos numquam! Animi nesciunt eligendi tenetur autem ab voluptate optio dicta ipsa, assumenda nihil, incidunt necessitatibus aut? Eum ipsa facere laboriosam! Dolorum, sunt?</p>
-                <button class="btn-medium btn-orange">Read more</button>
-            </div>
-            <div class="goals-images">
-                <img src="/images/person-1.jpg" class="big-img" alt="person 1" loading="lazy">
-                <img src="/images/person-2.jpg" class="small-img" alt="person 2" loading="lazy">
+            <div class="goals-wrapper">
+                <div class="goals-text">
+                    <hr><h2>Our goal</h2>
+                    <p class="light-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem sunt a est repellat nisi nemo, odit voluptatum, quos neque sapiente et! Cupiditate, quos numquam! Animi nesciunt eligendi tenetur autem ab voluptate optio dicta ipsa, assumenda nihil, incidunt necessitatibus aut? Eum ipsa facere laboriosam! Dolorum, sunt?</p>
+                    <button class="btn-medium btn-orange">Read more</button>
+                </div>
+                <div class="goals-images">
+                    <img src="/images/person-1.jpg" class="big-img" alt="person 1" loading="lazy">
+                    <img src="/images/person-2.jpg" class="small-img" alt="person 2" loading="lazy">
+                </div>
             </div>
         </section>
 
@@ -257,64 +261,66 @@
     </main>
 
     <footer>
-        <div class="footer-top">
-            <div class="col-1">
-                <p class="logo">Logo</p>
-                <div class="socials">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+        <div class="for-centering">
+            <div class="footer-top">
+                <div class="col-1">
+                    <p class="logo">Logo</p>
+                    <div class="socials">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <h4>Browse by categories</h4>
+                    <ul>
+                        <li><a href="#">Beverages</a></li>
+                        <li><a href="#">Grocery</a></li>
+                        <li><a href="#">Instant Meals & Noodles</a></li>
+                        <li><a href="#">Snacks & Desserts</a></li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                    <h4>Browse by countries</h4>
+                    <ul>
+                        <li><a href="#">Vietnam</a></li>
+                        <li><a href="#">Korea</a></li>
+                        <li><a href="#">Thailand</a></li>
+                        <li><a href="#">America</a></li>
+                    </ul>
+                </div>
+                <div class="col-4">
+                    <h4>Information</h4>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="col-2">
-                <h4>Browse by categories</h4>
-                <ul>
-                    <li><a href="#">Beverages</a></li>
-                    <li><a href="#">Grocery</a></li>
-                    <li><a href="#">Instant Meals & Noodles</a></li>
-                    <li><a href="#">Snacks & Desserts</a></li>
-                </ul>
+            <div class="footer-bottom">
+                <address>
+                    <h4>Contact Us</h4>
+                    <ul>
+                        <li>
+                            <i class="fa-solid fa-envelope"></i>
+                            <p>If you have any questions, please contact us at support@xyz.com</p>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-location-dot"></i>
+                            <p>39 Lonsade Street, Melbourne, VLC 300</p>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-phone"></i>
+                            <p><a href="tel:+61-401-224-357">+61-401-224-357</a></p>
+                        </li>
+                    </ul>
+                </address>
+                <p class="copyright">Copyright &copy; 2021. All Rights Reserved.</p>
             </div>
-            <div class="col-3">
-                <h4>Browse by countries</h4>
-                <ul>
-                    <li><a href="#">Vietnam</a></li>
-                    <li><a href="#">Korea</a></li>
-                    <li><a href="#">Thailand</a></li>
-                    <li><a href="#">America</a></li>
-                </ul>
-            </div>
-            <div class="col-4">
-                <h4>Information</h4>
-                <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">FAQs</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Terms & Conditions</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <address>
-                <h4>Contact Us</h4>
-                <ul>
-                    <li>
-                        <i class="fa-solid fa-envelope"></i>
-                        <p>If you have any questions, please contact us at support@xyz.com</p>
-                    </li>
-                    <li>
-                        <i class="fa-solid fa-location-dot"></i>
-                        <p>39 Lonsade Street, Melbourne, VLC 300</p>
-                    </li>
-                    <li>
-                        <i class="fa-solid fa-phone"></i>
-                        <p><a href="tel:+61-401-224-357">+61-401-224-357</a></p>
-                    </li>
-                </ul>
-            </address>
-            <p class="copyright">Copyright &copy; 2021. All Rights Reserved.</p>
         </div>
     </footer>
 </body>
