changed footer section's structure
for better responsiveness

--- a/index.html
+++ b/index.html
@@ -262,44 +262,42 @@
 
     <footer>
         <div class="for-centering">
-            <div class="footer-top">
-                <div class="col-1">
-                    <p class="logo">Logo</p>
-                    <div class="socials">
-                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
-                    </div>
+            <div class="col-1 footer-top">
+                <p class="logo">Logo</p>
+                <div class="socials">
+                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-pinterest-p"></i></a>
                 </div>
-                <div class="col-2">
-                    <h4>Browse by categories</h4>
-                    <ul>
-                        <li><a href="#">Beverages</a></li>
-                        <li><a href="#">Grocery</a></li>
-                        <li><a href="#">Instant Meals & Noodles</a></li>
-                        <li><a href="#">Snacks & Desserts</a></li>
-                    </ul>
-                </div>
-                <div class="col-3">
-                    <h4>Browse by countries</h4>
-                    <ul>
-                        <li><a href="#">Vietnam</a></li>
-                        <li><a href="#">Korea</a></li>
-                        <li><a href="#">Thailand</a></li>
-                        <li><a href="#">America</a></li>
-                    </ul>
-                </div>
-                <div class="col-4">
-                    <h4>Information</h4>
-                    <ul>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                    </ul>
-                </div>
+            </div>
+            <div class="col-2 footer-top">
+                <h4>Browse by categories</h4>
+                <ul>
+                    <li><a href="#">Beverages</a></li>
+                    <li><a href="#">Grocery</a></li>
+                    <li><a href="#">Instant Meals & Noodles</a></li>
+                    <li><a href="#">Snacks & Desserts</a></li>
+                </ul>
+            </div>
+            <div class="col-3 footer-top">
+                <h4>Browse by countries</h4>
+                <ul>
+                    <li><a href="#">Vietnam</a></li>
+                    <li><a href="#">Korea</a></li>
+                    <li><a href="#">Thailand</a></li>
+                    <li><a href="#">America</a></li>
+                </ul>
+            </div>
+            <div class="col-4 footer-top">
+                <h4>Information</h4>
+                <ul>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms & Conditions</a></li>
+                </ul>
             </div>
             <div class="footer-bottom">
                 <address>
