wrapped cart card elements with a div

--- a/index.html
+++ b/index.html
@@ -42,42 +42,44 @@
                 <input type="search" placeholder="Search">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
-            <div class="cart-details">
-                <i class="fa-sharp fa-solid fa-bag-shopping"></i>
-                <p>$254.46</p>
-                <div class="cart-items-card">
-                    <div class="cart-items">
-                        <div class="item">
-                            <img src="/images/product-1.png" alt="product 1">
-                            <div class="prod-info">
-                                <p class="prod-name-small">Product Name</p>
-                                <p class="prod-quantity">02</p>
+            <div class="cart-n-login">
+                <div class="cart-details">
+                    <i class="fa-sharp fa-solid fa-bag-shopping"></i>
+                    <p>$254.46</p>
+                    <div class="cart-items-card">
+                        <div class="cart-items">
+                            <div class="item">
+                                <img src="/images/product-1.png" alt="product 1">
+                                <div class="prod-info">
+                                    <p class="prod-name-small">Product Name</p>
+                                    <p class="prod-quantity">02</p>
+                                </div>
+                                <p class="prod-price">$59.45</p>
                             </div>
-                            <p class="prod-price">$59.45</p>
-                        </div>
-                        <hr>
-                        <div class="item">
-                            <img src="/images/product-2.png" alt="product 2">
-                            <div class="prod-info">
-                                <p class="prod-name-small">Product Name</p>
-                                <p class="prod-quantity">02</p>
+                            <hr>
+                            <div class="item">
+                                <img src="/images/product-2.png" alt="product 2">
+                                <div class="prod-info">
+                                    <p class="prod-name-small">Product Name</p>
+                                    <p class="prod-quantity">02</p>
+                                </div>
+                                <p class="prod-price">$59.45</p>
                             </div>
-                            <p class="prod-price">$59.45</p>
-                        </div>
-                        <hr>
-                        <div class="item">
-                            <img src="/images/product-3.png" alt="product 3">
-                            <div class="prod-info">
-                                <p class="prod-name-small">Product Name</p>
-                                <p class="prod-quantity">02</p>
+                            <hr>
+                            <div class="item">
+                                <img src="/images/product-3.png" alt="product 3">
+                                <div class="prod-info">
+                                    <p class="prod-name-small">Product Name</p>
+                                    <p class="prod-quantity">02</p>
+                                </div>
+                                <p class="prod-price">$59.45</p>
                             </div>
-                            <p class="prod-price">$59.45</p>
                         </div>
+                        <div class="cart-btn"><button class="btn-continue">Continue</button></div>
                     </div>
-                    <div class="cart-btn"><button class="btn-continue">Continue</button></div>
                 </div>
+                <p>Login/Register</p>
             </div>
-            <p>Login/Register</p>
         </div>
     </header>
     <nav>
